[tool.poetry]
name = "marimo-viz"
version = "0.1.0"
description = "A PoC of vizualisation with marimo"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "notebooks"}]

[tool.poetry.dependencies]
python = "3.11.3"
marimo = "^0.9.29"
plotly = "^5.24.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

